# vibrant-visuals-patcher

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
src/: dllmain.cpp
src/forcevv/: log.cpp  log.hpp  mod.cpp  mod.hpp
src/forcevv/compat/: better_render_dragon.cpp  better_render_dragon.hpp
src/forcevv/dx/: dx12_probe.cpp  dx12_probe.hpp
src/forcevv/gates/: vibrant_visuals_gate.cpp  vibrant_visuals_gate.hpp
src/forcevv/hooks/: hook_manager.cpp  hook_manager.hpp
src/forcevv/render/: d3d12_downlevel_retry.cpp  d3d12_downlevel_retry.hpp  renderer_compat_patches.cpp  renderer_compat_patches.hpp
